k8s/zimagi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zimagi
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
    - host: example.com
      http:
        paths:
          - path: /command-api
            pathType: Prefix
            backend:
              service:
                name: command-api-zimagi
                port:
                  number: 80
          - path: /data-api
            pathType: Prefix
            backend:
              service:
                name: data-api-zimagi
                port:
                  number: 80
